--- a/index.html
+++ b/index.html
@@ -281,16 +281,8 @@
                   </svg>
                 </a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">Tour</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Product</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Enterprise</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Products</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
                   <svg class="bi" width="24" height="24">
