feat: Add products page

--- a/products.html
+++ b/products.html
@@ -281,9 +281,9 @@
                   </svg>
                 </a>
               </li>
-              <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
               <li class="nav-item">
-                <a class="nav-link" href="./products.html">Products</a>
+                <a class="nav-link active" href="#">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
