feat: Update pagination

--- a/products.html
+++ b/products.html
@@ -300,6 +300,19 @@
 
     <main>
         <div class="container mt-5">
+            <nav aria-label="Page navigation example">
+                <ul id="pagination-nav" class="pagination justify-content-end">
+                  <!-- <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                  </li> -->
+                </ul>
+            </nav>
             <div class="row row-gap-3" id="product-list">
                 <!-- Product cards will be inserted here dynamically -->
             </div>
