--- a/products.html
+++ b/products.html
@@ -281,7 +281,9 @@
                   </svg>
                 </a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Home</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Products</a>
               </li>
@@ -299,24 +301,48 @@
     </nav>
 
     <main>
-        <div class="container mt-5">
-            <nav aria-label="Page navigation example">
-                <ul id="pagination-nav" class="pagination justify-content-end">
-                  <!-- <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                  </li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                  </li> -->
-                </ul>
-            </nav>
-            <div class="row row-gap-3" id="product-list">
-                <!-- Product cards will be inserted here dynamically -->
-            </div>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-8">
+            <input
+              type="text"
+              id="search-input"
+              class="form-control"
+              placeholder="Search by name"
+            />
+          </div>
+          <div class="col-md-4">
+            <select id="category-filter" class="form-select">
+              <option value="">All Categories</option>
+              <option value="electronics">Electronics</option>
+              <option value="fashion">Fashion</option>
+              <option value="home">Home</option>
+              <!-- Add more categories as needed -->
+            </select>
+          </div>
         </div>
+      </div>
+
+      <div class="container mt-3">
+        <div class="row row-gap-3" id="product-list">
+          <!-- Product cards will be inserted here dynamically -->
+        </div>
+      </div>
+      <div class="container mt-3">
+        <nav aria-label="Page navigation example">
+          <ul id="pagination-nav" class="pagination justify-content-end">
+            <!-- <li class="page-item disabled">
+                  <a class="page-link">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">Next</a>
+                </li> -->
+          </ul>
+        </nav>
+      </div>
     </main>
 
     <footer class="container py-5">
