--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
                 <a class="nav-link" href="./products.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <svg class="bi" width="24" height="24">
-                    <use xlink:href="#cart" />
-                  </svg>
+                <a class="nav-link" id="cartPopover" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover" href="#">
+                    <svg class="bi" width="24" height="24">
+                      <use xlink:href="#cart" />
+                    </svg>
                 </a>
               </li>
             </ul>
@@ -588,6 +588,12 @@
         </div>
       </div>
     </footer>
+
+    <!-- Hidden popover content -->
+    <div id="popover-content" class="d-none">
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
