--- a/products.html
+++ b/products.html
@@ -288,10 +288,10 @@
                 <a class="nav-link active" href="#">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <svg class="bi" width="24" height="24">
-                    <use xlink:href="#cart" />
-                  </svg>
+                <a class="nav-link" id="cartPopover" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover" href="#">
+                    <svg class="bi" width="24" height="24">
+                      <use xlink:href="#cart" />
+                    </svg>
                 </a>
               </li>
             </ul>
@@ -314,10 +314,20 @@
           <div class="col-md-4">
             <select id="category-filter" class="form-select">
               <option value="">All Categories</option>
-              <option value="electronics">Electronics</option>
-              <option value="fashion">Fashion</option>
-              <option value="home">Home</option>
-              <!-- Add more categories as needed -->
+              <option value="Electronics">Electronics</option>
+              <option value="Accessories">Accessories</option>
+              <option value="Fitness">Fitness</option>
+              <option value="Smart Home">Smart Home</option>
+              <option value="Furniture">Furniture</option>
+              <option value="Personal Care">Personal Care</option>
+              <option value="Kitchen">Kitchen</option>
+              <option value="Home Appliances">Home Appliances</option>
+              <option value="Tools">Tools</option>
+              <option value="Home Decor">Home Decor</option>
+              <option value="Transport">Transport</option>
+              <option value="Pet Supplies">Pet Supplies</option>
+              <option value="Office Supplies">Office Supplies</option>
+              <option value="Garden">Garden</option>
             </select>
           </div>
         </div>
@@ -477,7 +487,12 @@
         </div>
       </div>
     </footer>
+
+    <!-- Hidden popover content -->
+    <div id="popover-content" class="d-none">
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/script.js" type="module"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
