--- a/products.html
+++ b/products.html
@@ -302,7 +302,7 @@
 
     <main>
       <div class="container mt-5">
-        <div class="row">
+        <div class="row row-gap-2">
           <div class="col-md-8">
             <input
               type="text"
