feat: Add cart page

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand d-md-none" href="#">
+        <a class="navbar-brand d-md-none" href="./index.html">
           <svg class="bi" width="24" height="24">
             <use xlink:href="#aperture" />
           </svg>
@@ -275,13 +275,13 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav flex-grow-1 justify-content-between">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="./index.html">
                   <svg class="bi" width="24" height="24">
                     <use xlink:href="#aperture" />
                   </svg>
                 </a>
               </li>
-              <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link active" href="./index.html">Home</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="./products.html">Products</a>
               </li>
