--- a/cart.html
+++ b/cart.html
@@ -282,16 +282,24 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link active" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./products.html">Products</a>
+                <a class="nav-link" href="./products.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="cartPopover" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover" href="#">
-                    <svg class="bi" width="24" height="24">
-                      <use xlink:href="#cart" />
-                    </svg>
+                <a
+                  class="nav-link"
+                  id="cartPopover"
+                  data-bs-container="body"
+                  data-bs-toggle="popover"
+                  data-bs-placement="bottom"
+                  data-bs-content="Bottom popover"
+                  href="#"
+                >
+                  <svg class="bi" width="24" height="24">
+                    <use xlink:href="#cart" />
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -302,56 +310,18 @@
 
     <main>
       <div class="container mt-5">
-        <div class="row row-gap-2">
-          <div class="col-md-8">
-            <input
-              type="text"
-              id="search-input"
-              class="form-control"
-              placeholder="Search by name"
-            />
-          </div>
-          <div class="col-md-4">
-            <select id="category-filter" class="form-select">
-              <option value="">All Categories</option>
-              <option value="Electronics">Electronics</option>
-              <option value="Accessories">Accessories</option>
-              <option value="Fitness">Fitness</option>
-              <option value="Smart Home">Smart Home</option>
-              <option value="Furniture">Furniture</option>
-              <option value="Personal Care">Personal Care</option>
-              <option value="Kitchen">Kitchen</option>
-              <option value="Home Appliances">Home Appliances</option>
-              <option value="Tools">Tools</option>
-              <option value="Home Decor">Home Decor</option>
-              <option value="Transport">Transport</option>
-              <option value="Pet Supplies">Pet Supplies</option>
-              <option value="Office Supplies">Office Supplies</option>
-              <option value="Garden">Garden</option>
-            </select>
-          </div>
+        <h1 class="mb-4">Shopping Cart</h1>
+        <div id="cart-items" class="row">
+          <!-- Cart items will be dynamically inserted here -->
         </div>
-      </div>
-
-      <div class="container mt-3">
-        <div class="row row-gap-3" id="product-list">
-          <!-- Product cards will be inserted here dynamically -->
+        <div class="mt-4">
+          <h3>Total: $<span id="cart-total">0.00</span></h3>
         </div>
-      </div>
-      <div class="container mt-3">
-        <nav aria-label="Page navigation example">
-          <ul id="pagination-nav" class="pagination justify-content-end">
-            <!-- <li class="page-item disabled">
-                  <a class="page-link">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-                </li> -->
-          </ul>
-        </nav>
+        <div class="mt-3">
+          <button class="btn btn-primary" onclick="checkout()">
+            Proceed to Checkout
+          </button>
+        </div>
       </div>
     </main>
 
@@ -489,19 +459,27 @@
     </footer>
 
     <!-- Hidden popover content -->
-    <div id="popover-content" class="d-none">
-    </div>
+    <div id="popover-content" class="d-none"></div>
 
     <!-- Toast content -->
-    <div class="toast-container position-fixed bottom-0 end-0 p-3">
-      <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-container position-fixed bottom-0 end-0 p-3 mb-5">
+      <div
+        id="liveToast"
+        class="toast"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
         <div class="toast-header">
           <strong class="me-auto">Bootstrap</strong>
-          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
         </div>
-        <div class="toast-body">
-          Product added to cart!
-        </div>
+        <div class="toast-body">Product added to cart!</div>
       </div>
     </div>
 
