feat: move proceed checkout button and submit payment button to right side

--- a/checkout.html
+++ b/checkout.html
@@ -381,8 +381,9 @@
                       <input type="email" class="form-control" id="paypalEmail">
                     </div>
                   </div>
-                  
-                  <button type="submit" class="btn btn-primary mt-2">Submit Payment</button>
+                  <div class="d-flex justify-content-end">
+                  <button type="submit" class="btn btn-primary mt-2" onclick="alert('Payment is success.')">Submit Payment</button>
+                </div>
                 </form>
               </div>
             </div>
