--- a/cart.html
+++ b/cart.html
@@ -314,10 +314,10 @@
         <div id="cart-items" class="row">
           <!-- Cart items will be dynamically inserted here -->
         </div>
-        <div class="mt-4">
+        <div class="mt-4 d-flex justify-content-end">
           <h3>Total: $<span id="cart-total">0.00</span></h3>
         </div>
-        <div class="mt-3">
+        <div class="mt-3 d-flex justify-content-end">
           <a class="btn btn-primary" href="./checkout.html">
             Proceed to Checkout
           </a>
