--- a/products.html
+++ b/products.html
@@ -110,6 +110,7 @@
 
     <!-- Custom styles for this template -->
     <link href="./css/styles.css" rel="stylesheet" />
+    <link rel="icon" href="img/logo.svg" type="image/svg+xml">
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
